--- a/config.html
+++ b/config.html
@@ -41,6 +41,19 @@
             border: 1px solid #ccc;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 8px;
+            text-align: center;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
     </style>
 </head>
 <body>
@@ -63,10 +76,84 @@
         <button onclick="confirmarBolinha()">Confirmar</button>
     </div>
 
+    <h2>📋 Planilha de Lotes</h2>
+    <table id="planilha">
+        <thead>
+            <tr>
+                <th>Quadra</th>
+                <th>Lote</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
     <script>
         const API_URL = "https://script.google.com/macros/s/AKfycbzL2zXBQFJq1oTUbP2jZeOvpKqJnD4NI1b_dx8vhTTD_Omp9TolsP9-CyH8db-btd7mow/exec";
         let bolinhaSelecionada = null;
         let isDragging = false;
+        let lotesData = [];
+
+        async function carregarPlanilha() {
+            try {
+                console.log("🔄 Buscando dados da API...");
+                const response = await fetch(API_URL);
+                lotesData = await response.json();
+                console.log("✅ Dados recebidos:", lotesData);
+
+                let tbody = document.getElementById("planilha").querySelector("tbody");
+                tbody.innerHTML = "";
+
+                let quadras = new Set();
+                let lotesPorQuadra = {};
+
+                lotesData.forEach(lote => {
+                    let quadra = lote[0];
+                    let loteNum = lote[1];
+                    let status = lote[2];
+
+                    let tr = document.createElement("tr");
+                    tr.innerHTML = `<td>${quadra}</td><td>${loteNum}</td><td>${status}</td>`;
+                    tbody.appendChild(tr);
+
+                    quadras.add(quadra);
+                    if (!lotesPorQuadra[quadra]) lotesPorQuadra[quadra] = [];
+                    lotesPorQuadra[quadra].push(loteNum);
+                });
+
+                let quadraSelect = document.getElementById("quadra");
+                let loteSelect = document.getElementById("lote");
+
+                quadraSelect.innerHTML = "";
+                loteSelect.innerHTML = "";
+
+                quadras.forEach(quadra => {
+                    let option = document.createElement("option");
+                    option.value = quadra;
+                    option.textContent = quadra;
+                    quadraSelect.appendChild(option);
+                });
+
+                quadraSelect.addEventListener("change", function() {
+                    let quadraSelecionada = quadraSelect.value;
+                    loteSelect.innerHTML = "";
+
+                    if (lotesPorQuadra[quadraSelecionada]) {
+                        lotesPorQuadra[quadraSelecionada].forEach(lote => {
+                            let option = document.createElement("option");
+                            option.value = lote;
+                            option.textContent = lote;
+                            loteSelect.appendChild(option);
+                        });
+                    }
+                });
+
+                quadraSelect.dispatchEvent(new Event("change"));
+            } catch (error) {
+                console.error("❌ Erro ao carregar dados:", error);
+                alert("Erro ao carregar os dados da planilha.");
+            }
+        }
 
         function gerarBolinha() {
             let bolinha = document.createElement("div");
@@ -77,7 +164,6 @@
             bolinha.addEventListener("mousedown", function(event) {
                 bolinhaSelecionada = bolinha;
                 isDragging = true;
-
                 document.addEventListener("mousemove", moverBolinha);
                 document.addEventListener("mouseup", soltarBolinha);
             });
@@ -141,6 +227,7 @@
             }
         }
 
+        carregarPlanilha();
     </script>
 
 </body>
